--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "@vitejs/plugin-vue": "^5.0.5",
+    "sass": "^1.79.5",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.2",
     "vite": "^5.3.1"
