--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "rimraf": "^6.0.1",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
