feat: 主题切换效果完成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,11 @@
             "@/*": ["src/*"]
         }
     },
-    "include": ["src/**/*.ts", "src/**/*..d.ts", "src/**/*/tsx", "src/**/*.vue"]
+    "include": [
+      "src/**/*.ts",
+      "src/**/*..d.ts",
+      "src/**/*/tsx",
+      "src/**/*.vue",
+      "node_modules/.pnpm/unplugin-auto-import@0.17.6_@vueuse+core@9.13.0_vue@3.4.30__rollup@4.18.0/node_modules/unplugin-auto-import/auto-imports.d.ts"
+    ]
 }
