--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/spark-md5": "^3.0.4",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "path": "^0.12.7",
     "rimraf": "^6.0.1",
+    "spark-md5": "^3.0.2",
     "vue": "^3.4.29",
-    "vue-router": "4"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
