--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "rimraf": "^6.0.1",
-    "vue": "^3.4.29",
-    "vue-router": "4"
+    "scss": "^0.2.4",
+    "vue": "^3.5.14",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
-    "@types/node": "^22.7.5",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@types/node": "^22.15.21",
+    "@vitejs/plugin-vue": "^5.2.4",
     "eslint": "^9.27.0",
     "eslint-config-xo": "^0.47.0",
     "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.1.0",
-    "sass": "^1.79.5",
     "typescript-eslint": "^8.32.1",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.2",
-    "vite": "^5.3.1"
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-vue-components": "^28.5.0",
+    "vite": "^6.3.5"
   },
   "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
