--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "typescript-eslint": "^8.32.1",
     "unplugin-auto-import": "^19.2.0",
     "unplugin-vue-components": "^28.5.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-svg-loader": "^5.1.0"
   },
   "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
