feat: 添加svg的ts类型

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
     },
+    "files": ["custom.d.ts"],
     "include": ["src/**/*.ts", "src/**/*..d.ts", "src/**/*/tsx", "src/**/*.vue"]
 }
