feat: 添加vscode 扩展建议

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,11 @@
 {
   "recommendations": [
-    "Vue.volar",
-    "evondev.indent-rainbow-palettes",
-    "oderwat.indent-rainbow"
+    "oderwat.indent-rainbow",
+    "formulahendry.auto-rename-tag",
+    "dbaeumer.vscode-eslint",
+    "ms-vscode.vscode-typescript-next",
+    "mgmcdermott.vscode-language-babel",
+    "ecmel.vscode-html-css",
+    "gxl.git-graph-3"
   ]
 }
