--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "rimraf": "^6.0.1",
