--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^8.32.1",
+    "@vue/tsconfig": "^0.7.0",
     "axios": "^1.9.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "rimraf": "^6.0.1",
     "scss": "^0.2.4",
+    "typescript": "^5.8.3",
+    "vite-plugin-compression": "^0.5.1",
     "vue": "^3.5.14",
-    "vue-router": "^4.5.1"
+    "vue-eslint-parser": "^10.1.3",
+    "vue-router": "^4.5.1",
+    "vue-tsc": "3.0.0-alpha.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
