--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^8.32.1",
     "@vue/tsconfig": "^0.7.0",
     "axios": "^1.9.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
     "lodash": "^4.17.21",
@@ -32,6 +33,7 @@
     "@types/node": "^22.15.21",
     "@vitejs/plugin-vue": "^5.2.4",
     "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-config-xo": "^0.47.0",
     "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.2.0",
