--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "mgmcdermott.vscode-language-babel",
     "ecmel.vscode-html-css",
     "gxl.git-graph-3",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "editorconfig.editorconfig"
   ]
 }
