--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "@typescript-eslint/parser": "^8.32.1",
     "@vue/tsconfig": "^0.7.0",
     "axios": "^1.9.0",
     "eslint-plugin-prettier": "^5.4.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.0.0",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "rimraf": "^6.0.1",
@@ -37,11 +36,21 @@
     "eslint-config-xo": "^0.47.0",
     "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
     "typescript-eslint": "^8.32.1",
     "unplugin-auto-import": "^19.2.0",
     "unplugin-vue-components": "^28.5.0",
     "vite": "^6.3.5",
     "vite-svg-loader": "^5.1.0"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
+  "lint-staged": {
+    "src/**/*.{js,cjs,ts,vue}": [
+      "pnpm lint:fix"
+    ],
+    "stc/*/*/.{html,json,css,scss}": [
+      "npx prettier --write"
+    ]
+  }
 }
