--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "vue-tsc": "3.0.0-alpha.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.27.0",
     "@types/node": "^22.15.21",
     "@vitejs/plugin-vue": "^5.2.4",
